fix overflow on mainArticle2

--- a/less/index.less
+++ b/less/index.less
@@ -362,7 +362,7 @@ main {
                     
                     margin: 6% 0;
                     max-width: 320px;
-                    max-height: 200px;
+                    // max-height: 200px;
 
                     h3 {
                         font-weight: bold;
